--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -3,15 +3,8 @@
 \addcontentsline{toc}{section}{Introducción}
         \textbf{\Large Introducción}\newline
 
-           
-    % \section{Patrimonio Cultural}
+        ...
 
-    % Hay diversas perspectivas desde las que se puede afrontar una reflexión sobre el patrimonio. Podría comenzarse, por ejemplo, con un análisis formal del concepto; un enfoque que atienda no solo a su sentido etimológico o semántico, sino también al modo en que ha sido tratado en la literatura antropológica reciente. En este sentido, hablar de patrimonio es hablar de lo que se posee, de la hacienda y bienes -espirituales o materiales, muebles o inmuebles- de una persona, de una familia o de un grupo. De este concepto general se pueden seguir otras nociones derivadas, tales como patrimonio económico, patrimonio histórico o patrimonio cultural.
-
-    % El patrimonio cultural es la suma de todos los bienes culturales acumulados voluntariamente por una comunidad dada. Un bien cultural es determinado como tal, solo cuando la comunidad lo selecciona como elemento que debe ser conservado por poseer valores que trascienden su uso o función primitiva \cite{patrimonioCultural_Identidad}. Por su parte la Organización de las Naciones Unidas para la Educación, la Ciencia y la Cultura (UNESCO) define que lo comprenden las obras de sus artistas, arquitectos, músicos, escritores y sabios, así como las creaciones anónimas, surgidas del alma popular, y el conjunto de valores que dan sentido a la vida, es decir, las obras materiales y no materiales que expresan la creatividad de ese pueblo; la lengua, los ritos, las creencias, los lugares y monumentos históricos, la literatura, las obras de arte y los archivos y bibliotecas.
-
-    % El concepto que se define en Cuba en el Decreto No. 118 de la Ley No. 1, Ley de Protección al Patrimonio Cultural (1983), establece en su artículo 1 que: El patrimonio cultural de la nación está integrado por aquellos bienes, muebles e inmuebles, que son la expresión o el testimonio de la creación humana o de la evolución de la naturaleza y que tienen especial relevancia en relación con la arqueología, la prehistoria, la historia, la literatura, la educación, el arte, la ciencia y la cultura en general.
- 
     \section{Internet de las Cosas}
 
     El IoT como arquitectura emergente basada en la Internet global presta la posibilidad de intercambio de bienes y servicios entre redes de la cadena de suministro y que tiene un impacto importante en la seguridad y privacidad de los actores involucrados \cite{weber}. 
@@ -22,7 +15,7 @@
 
         En el caso del Conjunto Monumental de San Domenico Maggiore, ubicado en Nápoles (Italia), dentro del mismo se han transformado más de 270 esculturas en obras de arte parlantes. Equipado con un tablero de sensores, cada objeto puede proponerse automáticamente a los visitantes, compartiendo su historia en diferentes modalidades e idiomas, lo que permite un proceso de disfrute novedoso durante una experiencia cultural. \cite{monumentoSanDomenico}.
     
-        En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.\\
+        En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
     
         Estos son solo dos de los ejemplos. La tabla 1.2 muestra una relación de otros autores que emplean el IoT en los museos. Pero antes, para poder comprender la tabla 1.2 debemos definir una primera tabla en la que se le otorga a cada autor un número de manera tal que se entienda quien es cada autor. Por lo que se define la tabla 1.1:
 
@@ -34,14 +27,14 @@
         \rowcolor[HTML]{9698ED} 
         Autor & Numeración Asociada \\ \hline
         Maksimovic y Cosovic \cite{maksimovic}     & 1                   \\ \hline
-        Shah y Mishra \cite{shan}     & 2                   \\ \hline
-        Marshall \cite{marshall}     & 3                   \\ \hline
-        Ghosh, Roy, y Saha \cite{ghosh}     & 4                   \\ \hline
-        Rao, Sharma, y Narayan \cite{rao}     & 5                   \\ \hline
-        Alletto y cols. \cite{alletto}     & 6                   \\ \hline
-        Alsuhly y Khattab \cite{alsuhly}     & 7                   \\ \hline
-        Spachos y Plataniotis \cite{spachos}     & 8                   \\ \hline
-        (Lopez-Martínez, Iglesias, y Carrera \cite{lopezmartinez}     & 9                   \\ \hline
+        Shah y Mishra \cite{shan}     & 2                                \\ \hline
+        Marshall \cite{marshall}     & 3                                 \\ \hline
+        Ghosh, Roy, y Saha \cite{ghosh}     & 4                          \\ \hline
+        Rao, Sharma, y Narayan \cite{rao}     & 5                        \\ \hline
+        Alletto y cols. \cite{alletto}     & 6                           \\ \hline
+        Alsuhly y Khattab \cite{alsuhly}     & 7                         \\ \hline
+        Spachos y Plataniotis \cite{spachos}     & 8                     \\ \hline
+        (Lopez-Martínez, Iglesias, y Carrera \cite{lopezmartinez}     & 9\\ \hline
         \end{tabular}
         \label{tab:numeracion_autores}
     \end{table}
@@ -69,16 +62,56 @@
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
 
-    En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, dentro de ellos se encuentra el Palacio del Segundo Cabo.\\
-        
-    Desde 2012 se venía proyectando una sala dedicada al libro cubano, con la cooperación de la Unión Europea y la UNESCO. \cite{oficinaHistoriadorRescatepatrimonio}. Gracias a este Rescate Patrimonial y Desarrollo Cultural en La Habana, se propició la restauración del mismo para la creación del centro. Esta iniciativa de cooperación internacional fue desarrollada por la Oficina del Historiador de la Ciudad de La Habana, con apoyo de la UNESCO \cite{potencialidadProyectoMuseologico}.\\
-        
-    El centro cuenta con una sala monográfica que propone un audiovisual realizado por autores cubanos donde se relata la historia del inmueble donde está ubicada la institución. Además de una sala introductoria que refleja la visión que se tenía antes del encuentro de las dos culturas con la llegada de Cristóbal Colón. Este relata en paralelo la historia de Cuba y de Europa interrelacionadas en un ambiente inmersivo y por fuera se puede recorrer desde la visión de las artes plásticas europeas y cubanas. Siempre están acompañados de cuatro audiovisuales que recorren líneas independientes como la historia de la esclavitud, la ciencia, los servicios públicos y la economía.\\
-        
-    Adosada a esta sala se encuentra la de llegada y migraciones donde en un espacio se reproduce una parte de un galeón, atractivo para el público pues puede sentirse una ligera «brisa de mar», una corriente de aire situada en la parte posterior del barco. Esto se complementa con dos pantallas y proyectores que permiten la proyección de un audiovisual que también narra la llegada de los aborígenes, los conquistadores; la migración forzada de los africanos y así sucesivamente con las diferentes olas migratorias que han formado la actual característica mestiza de nuestra identidad y nación.\\
-        
-    La Sala de Viajeros se soporta en un software que despliega una galería de imágenes ya sea de cubanos relevantes de visita por Europa o de europeos de visita en Cuba. Mediante el uso de pantallas táctiles, el visitante puede interactuar con las imágenes de las personalidades, leer una síntesis biográfica e incluso escuchar muestras de audio.
+    En el contexto cubano, hasta el momento solo se tiene referencia de un artÍculo cientÍfico publicado en Cuba por Mengana de la Fe \cite{lopezramos} en el Museo Emilio Bacardí de la Ciudad de Santiago de Cuba con el uso de la RA,
+    sin integracion con otras tecnologías, pero se demuestra el interes de insertar esta dentro del pueblo cubano ya que hay referencias de proyectos enfocados a la educacion y a los videojuegos en noticias o eventos organizados por instituciones cubanas.
+    Por su parte el uso del IoT se evidencia en el turismo tal como lo analiza Franco \cite{franco} y Cordova y cols. \cite{cordovacorso}, en la protección del medio ambiente de Morales \cite{morales} y para el control de acceso de personal no autorizado por parte de Cruz y cols. \cite{cruzrojas}.
+
+    Otros de los ejemplos de la aplicación del IoT en nuestro país lo constituyen el sistema IoT para el control del nivel de tanques de agua de La Habana \cite{herrera2020}, en el cual se brinda una solución desarrollada sobre Arduinos utilizando transporte de telemetría de mensajes en cola (MQTT, Message Queing Telemetry Transport)
+    como protocolo de comunicación máquina-máquina (M2M) a través de un servidor Mosquitto. Tal es el caso también de la alternativa \textit{Open Source} en la implementación de un sistema IoT para la medición de la calidad del aire con el empleo de tarjetas de desarrollo Arduino, ESP8266 y de sensores destinados a la captura de la concentración de CO2 y gases generales, así como densidad de polvo \cite{ochoa2018alternativa}.
     
+    Aún cuando existan más ejemplos del empleo del Internet de las Cosas en Cuba, no se ha encontrado evidencia de su aplicación en los museos cubanos, de ahí el aporte novedoso de este proyecto.
+
+    \section{Colección de Arte y Arqueología Francisco Prat Puig}
+
+    Como parte de las entrevistas con los especialistas y los recoridos en la colección se identificaron aspectos a destacar tales como:
+
+    \begin{itemize}
+        \item Presenta daños causados por la incidencia de las variables ambientales o ataques biológicos de xilófagos en los bienes patrimoniales que se encuentran en exposicion o en el almacen. Principalmente para aquellos confeccionados con materiales como son: el papel, cuero, tela y madera.
+        \item Imposibilidad de conocer o controlar el estado de conservación de los elementos patrimoniales en tiempo real.
+        \item No existe ningún tipo de tecnología implementada en la colección para los especialistas ni hacia el público visitante.
+        \item Insuficiente control ambiental, seguridad y prevención de posibles daños en el futuro de la colección.
+    \end{itemize}
+
+    En síntesis, se puede afimar que la gestión de la colección de Artes y Arqueología Francisco Prat Puig carece de una intervención tecnológica que favorezca la calidad en la toma de decisiones para su conversacion preventiva.\\
+
+    La colección Francisco Prat Puig está distribuida de tal modo que las piezas están ubicadas en tres salas. Enumerándolas: sala 1, sala 2 y sala 3.\\
+    La sala 1 (Exposición permanente) (figura \ref{imag:sala_1}) está caracterizada por la presencia de varios objetos distribuidos en vitrinas, sobre mesas, colgados, en estantes empotrados en la pared, o en pedestales. Se observan varios objetos de cerámica, marfil, metal, piedra, madera, etcétera.\newline
+    
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=8cm, height=6cm]{imagenes/sala_1.jpg}
+        \caption{Sala 1}
+        \label{imag:sala_1}
+    \end{figure}
+
+    En la sala 2 solamente se encuentran pinturas pertenecientes a la colección, estas poseen también condiciones de deterioro notables por el efecto de la humedad y del nivel de luz dentro del local.
+
+    [Imagen de la sala 2]\newline
+    Dentro de la sala 3 se localizan también varios objetos ubicados en pedestales mostrando colecciones de medallas y objetos personales del mismo Prat Puig y, además, vitrinas donde se hallan, principalmente, objetos de cerámica como platos, jarrones y cántaros.\newline
+    [Imagen sala 3]\newline
+
+    En el gráfico que se muestra a continuación se relaciona el valor cuantitativo de las principales formas en las que se exponen las piezas dentro de estas salas pertenecientes a la colección.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=10cm, height=6cm]{imagenes/formas expositivas.jpg}
+        \caption{Ubicación piezas}
+        \subcaption*{Fuente: Elaboración propia}
+        \label{imag:ubicacion_piezas}
+    \end{figure}
+
+    Según la figura \ref{imag:ubicacion_piezas}, varios objetos están dispuestos dentro de vitrinas donde, al encontrarse protegido por paredes de cristal, se genera un microclima\footnote{microclima: según el diccionario Oxford, es el conjunto de las condiciones climáticas particulares de un lugar determinado, resultado de una modificación más o menos acusada y puntual del clima de la zona en que se encuentra influido por diferentes factores ecológicos y medioambientales.}, por lo que la condición ambiental en estas es diferente a la condición ambiental de la sala, de ahí la necesidad de incorporar nodos de tal manera que se tomen los datos dentro de estas vitrinas y, además, un nodo para la sala en general.
+
     \section{Arquitectura IoT y sus principales capas}\label{sec:arquitecturas}
 
     No existe una única definición universalmente adoptada, estándar, de Arquitectura de IoT; diferentes propuestas han surgido durante su desarrollo. Se abarcan tecnologías de comunicación, dispositivos de cómputo, sensores y actuadores \cite{ioT_en_Cosas_de_salud}.
@@ -133,10 +166,9 @@
         \label{imag:modelos_arquitecturas_iot}
     \end{figure}
 
-    \newpage
-
     Desde el punto de vista de Ciberseguridad \cite{capasIoTciberseguridad} existen capas fundamentales dentro de la esctructura de IoT. En la tabla \ref{tab: capas_IoT} se detallan estas capas:
-    \begin{table}[H]
+
+    \begin{table}[h]
         \centering
         \caption{Capas de IoT}
         \subcaption*{Fuente: \cite{capasIoTciberseguridad}}
@@ -172,101 +204,44 @@
 
     \subsection{Propuesta de la Arquitectura IoT del Sistema}
 
-    En base de los es quemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas.
-
-    \newpage
+    En base de los esquemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas que la componen:
     
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.1.1\hspace{5mm}Vista funcional}
-        \textbf{1.4.1.1\hspace{5mm}Vista funcional}
+    \begin{itemize}
+        \item \textbf{Capa de Percepción: }Contiene todos los Nodos que se ubicarán en cada vitrina de la colección con sus sensores interconectados según sea la necesidad de cada vitrina y permitirán obtener los valores de las variables ambientales.
+        \item \textbf{Capa de Transporte: }En esta capa se presenta el tipo de tecnología que se requiere utilizar para la transmisión de los datos recopilados por los sensores de los nodos con el concentrador principal que se encuentra en la Capa de Procesamiento, la comunicación entre ellos se realizá por Wifi y como protocolo de comunicación se pretende utilizar MQTT para mantener los valores actualizados constantemente.
+        \item \textbf{Capa de Procesamiento: }Aquí se encuentra el concentrador principal con un servidor MQTT instalado,y con la Capa de Transporte se comunica con cada Nodo con sus sensores y contiene una base de datos local para almacenar todos los datos recopilados. Este concentrador a su vez envía estos datos de manera automática utilizando la conexión de Internet que se encuentra en el museo a una plataforma web de patrimonio universitario que se encuentra disponible en los servidores de la Universidad de Oriente y fue implementada por los autores Morejón y cols.\cite{morejon} utilizando una API en proceso de desarrollo. De igual forma en esta capa se podrán aplicar algoritmos de multicriterio que permitan analizar los datos y brindarles a los especialistas diferentes acciones.
+        \item \textbf{Capa de Visualización: }En esta capa se encuentra la representación de todos los datos recopilados en la plataforma universitaria a los directivos o especialistas de la colección por navegadores web, sin embargo aunque esta es una alternativa de obtener esos datos, la principal novedad de esta investigación es la integración del IoT con la RA por lo que los especialistas que se encuentren dentro del museo podrán acceder a la información utilizando una aplicación móvil que se propone y utiliza la tecnología de RA para mostrar alertas y la información ambiental para cada vitrina o bien patrimonial, de igual forma desde la aplicación se podrá interactuar con la ficha técnica de cada elemento patrimonial para enviarlo a conservación o restauración. 
+    \end{itemize}
 
-    En la figura \ref{imag:vista_funcional_arquitectura_iot} se observan los diferentes módulos funcionales que componen las capas de la propuesta arquitectónica. La capa de percepción se encarga de la obtención de variables asociadas a la conservación de las piezas en la muestra (sensores-microcontroladores), la capa de transporte con el propósito de transportar la data recopilada por los sensores para su posterior procesamiento y análisis, la capa de procesamiento que genera predicciones y recomendaciones expuesta a cambios constantes de los valores que se reciben desde el comienzo del ciclo en la etapa de percepción y, la capa de aplicación, la cual permite a los usuarios finales visualizar en una interfaz y mediante el empleo de la RA (Realidad Aumentada), los datos y predicciones en dependencia de la información recopilada.\\
+    El alcance de este trabajo va dirigido a la explicación detallada de la Capa de Percepción, enfocándose en las características del microcontrolador y sensores a emplear según la necesidad, así como la Capa de Transporte donde se hace un análisis de los métodos y protocolos de comunicación empleados en el sistema.
 
-    \begin{figure}[H]
-        \hspace{5cm}
-        \includegraphics[width=9cm, height=4.4cm]{imagenes/myArquitecture2.jpg}
-        \caption{Vista funcional de la arquitectura}
-        \subcaption*{Fuente: Elaboración propia}
-        \label{imag:vista_funcional_arquitectura_iot}
-    \end{figure}
+    \subsection{Capa de Percepción}\label{subsec:capa_percepcion}
 
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.1.2\hspace{5mm}Vista de implementación}
-        \textbf{1.4.1.2\hspace{5mm}Vista de implementación}
+    Las SN (Sensor Network: Rede de Sensores) incluyen múltiples dispositivos (motes o nodos) equipados con transductores, actuadores y sensores que interactúan según la aplicación IoT \cite{hernandez}.
+    Una SN puede estar formada por cientos o miles de nodos que se comunican entre sí y transmiten datos a otros dispositivos como el Gateway y a través de este se envían a un sistema distribuido o centralizado
+    para su almacenamiento y procesamiento \cite{hernandez} \cite{lee}.
 
-    En la vista de implementación se muestran los componentes de hardware y software del sistema propuesto, en los cuales se presenta la interfaz de usuario esperada a través del empleo de Realidad Aumentada y el circuito perteneciente a la capa de percepción
-    así como el empleo de comunicaciones Wifi y de RED en la capa de transporte y el concentrador RaspberryPi perteneciente a la capa de procesamiento donde se trabaja además, sobre la plataforma perteneciente al patrimonio universitario.
-    En la figura \ref{imag:vista_implementacion_arquitectura_iot}, se observan las tecnologías empleadas en cada una de las capas propuestas en la arquitectura descrita.
-    
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=8cm, height=5.4cm]{imagenes/vista de implementación.jpg}
-        \caption{Vista de implementación}
-        \subcaption*{Fuente: Elaboración propia}
-        \label{imag:vista_implementacion_arquitectura_iot}
-    \end{figure}
+    Los sensores convierten estímulos físicos en señales eléctricas analógicas o digitales y según la señal se clasifican en acústicos, eléctricos, magnéticos, ópticos, térmicos y mecánicos \cite{hernandez}.
+    También, se encargan de monitorear las características físicas, químicas o ambientales como: temperatura, humedad, movimiento, velocidad del viento, dirección del viento, nivel de Ph, electro conductividad, nivel de luz, entre otras \cite{lee}.
 
-    El alcance de este trabajo va dirigido a la explicación detallada de la capa de percepción, enfocándose en las características del microcontrolador y sensores a emplear, así como la capa de transporte donde se hace un análisis de los métodos y protocolos de comunicación empleados en el sistema.
-
-    \subsection{Capa de percepción}\label{subsec:capa_percepcion}
-
-    Contiene todos los Nodos que se ubicarán en cada vitrina de la colección con sus sensores interconectados segun sea la necesidad de cada vitrina y permitirán obtener los valores de las variables ambientales.
-
-    Esta sucesión de sensores, en conjunto con el microcontrolador conforman la capa de percepción (figura \ref{imag:capa_percepcion}). 
-
-    
+    La sucesión de sensores, en conjunto con el microcontrolador conforman la capa de percepción (figura \ref{imag:capa_percepcion}). 
 
     \begin{figure}[H]
         \centering
-        \includegraphics[width=8.5cm, height=4cm]{imagenes/perception_image.jpg}
+        \includegraphics[width=8.5cm, height=4.5cm]{imagenes/perception_image.jpg}
         \caption{Diagrama funcional de captura de datos}
         \subcaption*{Fuente: Elaboración propia}
         \label{imag:capa_percepcion}
     \end{figure}
 
-    \newpage
+    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.2.1\hspace{5mm}Nodos}
+    \textbf{1.4.2.1\hspace{5mm}Nodos}
 
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.2.1\hspace{5mm}Nodos}
-    \textbf{1.3.2.1\hspace{5mm}Nodos}
-
-    Los nodos que recopilarán los datos de cada vitrina estarán compuestos por el microcontrolador y los sensores encargados de tomar los valores medioambientales presentes teniendo en cuenta el material de las piezas expuestas dentro de cada una de las vitrinas por separado.\\
-
-    \textbf{Tengo ideas de agregar la descripción de los sensores con el microcontrolador con respecto a las variables medioambientales pero creo que me choca con lo que debo poner en el capítulo I}
-
-    \section{Colección de Arte y Arqueología Francisco Prat Puig}
-
-    La colección Francisco Prat Puig está distribuida de tal modo que las piezas están ubicadas en tres salas. Enumerándolas: sala 1, sala 2 y sala 3.\\
-    La sala 1 (Exposición permanente) (figura \ref{imag:sala_1}) está caracterizada por la presencia de varios objetos distribuidos en vitrinas, sobre mesas, colgados, en estantes empotrados en la pared, o en pedestales. Se observan varios objetos de cerámica, marfil, metal, piedra, madera, etcétera.\newline
+    Los nodos que recopilarán los datos de cada vitrina estarán compuestos por el microcontrolador y los sensores encargados de tomar los valores medioambientales presentes teniendo en cuenta el material de las piezas expuestas dentro de cada una de las vitrinas.
     
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=8cm, height=6cm]{imagenes/sala_1.jpg}
-        \caption{Sala 1}
-        \label{imag:sala_1}
-    \end{figure}
+    Estos nodos estarán ubicados también en las salas en aras de tomar datos de la habitación y relacionarlos con los obtenidos de las vitrinas.
 
-    En la sala 2 solamente se encuentran pinturas pertenecientes a la colección, estas poseen también condiciones de deterioro notables por el efecto de la humedad y del nivel de luz dentro del local.
-
-    [Imagen de la sala 2]\newline
-    Dentro de la sala 3 se localizan también varios objetos ubicados en pedestales mostrando colecciones de medallas y objetos personales del mismo Prat Puig y, además, vitrinas donde se hallan, principalmente, objetos de cerámica como platos, jarrones y cántaros.\newline
-    [Imagen sala 3]\newline
-
-    En el gráfico que se muestra a continuación se relaciona el valor cuantitativo de las principales formas en las que se exponen las piezas dentro de estas salas pertenecientes a la colección.
-
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=10cm, height=6cm]{imagenes/formas expositivas.jpg}
-        \caption{Ubicación piezas}
-        \subcaption*{Fuente: Elaboración propia}
-        \label{imag:ubicacion_piezas}
-    \end{figure}
-
-    Según la figura \ref{imag:ubicacion_piezas}, varios objetos están dispuestos dentro de vitrinas donde, al encontrarse protegido por paredes de cristal, se genera un microclima\footnote{microclima: según el diccionario Oxford, es el conjunto de las condiciones climáticas particulares de un lugar determinado, resultado de una modificación más o menos acusada y puntual del clima de la zona en que se encuentra influido por diferentes factores ecológicos y medioambientales.}, por lo que la condición ambiental en estas es diferente a la condición ambiental de la sala, de ahí la necesidad de incorporar nodos de tal manera que se tomen los datos dentro de estas vitrinas y, además, un nodo para la sala en general. \newline
-
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.2.1\hspace{5mm}Variables ambiantales}
-        \textbf{1.4.2.1\hspace{5mm}Variables ambiantales}
-
-    Como resultado de los recorridos ...
-
-    En la tabla \ref{tab:correlacion_nodos} se relaciona la variable a medir según la ubicación del nodo.
+    En base a esto, la tabla \ref{tab:correlacion_nodos} relaciona la variable a medir según la ubicación del nodo.
 
     \begin{table}[h]
         \centering
@@ -294,30 +269,34 @@
         \label{tab:correlacion_nodos}
     \end{table}
 
-    \newpage
+    Las variables ambientales a medir van estrechamente relacionadas con los sensores; estos sensores también fueron elegidos principalmente por su alto rango de mediciones ya que permiten diversos valores mínimos 
+    y máximos permitiendo a su vez detectar cualquier inconveniente que pueda ser corregido mediante software sin necesidad de realizar calibraciones constantes en los laboratorios y se mantenga el sistema en invariable funcionamiento. 
+
+    En el caso del microcontrolador lo que propone Alsuhly y cols.\cite{alsuhly} es utilizar como nodo un ESP32, un microcontrolador basado en el chip ESP8266 con bastante potencia para poder procesar la información de cada sensor de manera rápida,
+    la conexion de este puede ser vía inalámbrica o por bluetooth al concentrador principal. En este caso se usará un NodeMCU, el cual es similar al ESP32 pero no contiene la interfaz bluetooth, esto permite abaratar más los costos de instalación ya que se necesitarán varios para cada vitrina de la colección.
 
     \subsection{Capa de transporte}\label{subsec:capa_transporte}
 
     Esta es la capa responsable del traslado de la data a través de los demás componentes del sistema estableciendo la comunicación necesaria desde la toma de valores ambientales hasta su análisis y muestreo.    
     Según \cite{internetOfThingsStateOfTheArt}, la capa de transporte es la que se encarga de transportar y transmitir los datos, recopilados de la capa de percepción, hacia la cloud. Se localizan componentes de red (switch, router, Gateway, etc.), medios de comunicación y protocolos. También es responsable de aspectos de seguridad y el control de ataques.
     
-    Los datos se promueven a través de protocolos MQTT, HTTP y TCP/IP.\newline
+    Los datos se promueven a través de protocolos MQTT, HTTP y TCP/IP.
     
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.4.1\hspace{5mm}Protocolo MQTT}
-        \textbf{1.3.4.1\hspace{5mm}Protocolo MQTT}
+    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.3.1\hspace{5mm}Protocolo MQTT}
+        \textbf{1.4.3.1\hspace{5mm}Protocolo MQTT}
 
     MQTT son las siglas MQ Telemetry Transport, aunque en primer lugar fue conocido como Message Queing Telemetry Transport. Es un protocolo de comunicación M2M (machine-to-machine) de tipo message queue. Está basado en la pila TCP/IP como base para la comunicación. En el caso de MQTT cada conexión se mantiene abierta y se “reutiliza” en cada comunicación. Es una diferencia, por ejemplo, a una petición HTTP 1.0 donde cada transmisión se realiza a través de conexión.
     MQTT fue creado por el Dr. Andy Stanford-Clark de IBM y Arlen Nipper de Arcom (ahora Eurotech) en 1999 como un mecanismo para conectar dispositivos empleados en la industria petrolera.
     Aunque inicialmente era un formato propietario, en 2010 fue liberado y pasó a ser un estándar en 2014 según la OASIS (Organization for the Advancement of Structured Information Standards). \cite{mqtt}\\
 
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.4.2\hspace{5mm}Protocolo HTTP}
-        \textbf{1.3.4.2\hspace{5mm}Protocolo HTTP}
+    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.3.2\hspace{5mm}Protocolo HTTP}
+        \textbf{1.4.3.2\hspace{5mm}Protocolo HTTP}
 
     HTTP de sus siglas en inglés: “Hypertext Transfer Protocol”, es el nombre de un protocolo el cual nos permite realizar una petición de datos y recursos, como pueden ser documentos HTML. Es la base de cualquier intercambio de datos en la Web, y un protocolo de estructura cliente-servidor, esto quiere decir que una petición de datos es iniciada por el elemento que recibirá los datos (el cliente), normalmente un navegador Web. Así, una página Web completa resulta de la unión de distintos sub-documentos recibidos, por ejemplo: un documento que especifique el estilo de maquetación de la página Web (CSS), el texto, las imágenes, videos, scrips, etcétera.\\
 
 
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.4.3\hspace{5mm}Protocolo TCP/IP}
-        \textbf{1.3.4.3\hspace{5mm}Protocolo TCP/IP}
+    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.3.3\hspace{5mm}Protocolo TCP/IP}
+        \textbf{1.4.3.3\hspace{5mm}Protocolo TCP/IP}
 
     La definición de TCP/IP es la identificación del grupo de protocolos de red que hacen posible la transferencia de datos en redes, entre equipos informáticos e internet. Las siglas TCP/IP hacen referencia a este grupo de protocolos:
 
@@ -334,15 +313,17 @@
 
     \section{Condiciones que favorecen el ataque de insectos xilófagos}
 
-    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos influyendo en la intensidad o severidad del ataque de estos insectos. Entre estos se pueden mencionar humedad, edad de la madera, diversidad genética, población de insectos presente y temperatura,entre otros \cite{ripa2004termitas}. 
+    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, no se encontró ningún sensor para medir el posible ataque de xilófagos, por lo que para anunciar la presencia de este tipo de anomalía se analizarán los restantes sensores y por correlación de datos será posible tenerlo en cuenta también.
+    
+    Por esto se realiza el análisis de las condiciones óptimas para la aparición de los mismos influyendo en la intensidad o severidad del ataque de estos insectos. Entre estos se pueden mencionar humedad, temperatura, entre otros \cite{ripa2004termitas}. 
     
     \subsection{Humedad}
 
     El contenido de agua de la madera constituye uno de los factores más importantes que favorecen el ataque de las especies xilófagas. Maderas con un contenido de humedad sobre el 15\% favorece las infestaciones de coleópteros xilófagos, acortando significativamente sus ciclos de vida lo que aumenta sus poblaciones y la posibilidad de reinfestaciones \cite{ripa2004termitas}, esto relacionado a que la acumulación de humedad se acentúa en construcciones con escasa ventilación, la que se debe incrementar en espacios interiores.
 
-    ...
+    Según Araquistain y col. \cite{monitoringMoisture} y Rodríguez y col. \cite{rodriguezcodigo}, el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55\% mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50\%. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 15\%.
 
-    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Según \cite{monitoringMoisture} y \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55\% mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50\%. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 15\%.
+    \subsection{Temperatura}
 
     Valores de temperatura idóneos para la aparición de xilófagos...
 
