--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -149,12 +149,12 @@ A continuación se describen por partes los elementos que componen dichos nodos.
         \item Precisión
         \item Voltaje de alimentación
         \item Corriente de alimentación
-        \item Precio
+        \item Precio de referencia
     \end{itemize}
 
     \vspace{1cm}
 
-En la siguiente tabla se relacionan los mismos.
+    Resumiendo en la siguiente tabla los sensores a emplear según la variable a medir.
 
 \begin{table}[H]
     \centering
