--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -17,6 +17,10 @@
     \textbf{HTTP} - Hypertext Transfer Protocol
     \newline
     \textbf{GPIO} - General Purpose Input Output
+    \newline
+    \textbf{SN} - Sensor Network (Rede de Sensores)
+    \newline
+    \textbf{M2M} - Machine To Machine
     
     \setcounter{page}{1}
     \thispagestyle{plain}
