--- a/ref.bib
+++ b/ref.bib
@@ -640,3 +640,98 @@ Internet of things CISCO
   year            = {2020},
   pages           = {132-139}
 }
+
+@article{morejon,
+  author          = {S. Morejon Labrada, C. Ramírez Martín, y L. Jimenez Aranda},
+  journal         = {in II Convencion Internacional de Ciencia y Conciencia, Universidad de Oriente, Cuba},
+  title           = {Plataforma Web para la Gestión del Patrimonio Cultural de la región oriental de Cuba.},
+  year            = {2021}
+}
+
+@article{hernandez,
+  author          = {D. Hernández, Bertha Mazón-Olivo y Carlos Escudero},
+  journal         = {in Análisis de Datos Agropecuarios},
+  number          = {1st ed.},
+  title           = {‘Internet de las cosas (IoT)'},
+  pages           = {74-100},
+  year            = {2018}
+}
+
+@article{lee,
+  author          = {I. Lee y K. Lee},
+  journal         = {Bus. Horiz.},
+  number          = {4},
+  title           = {'The Internet of Things (IoT): Applications, investments, and challenges for enterprises'},
+  volume          = {vol. 58},
+  pages           = {431-440},
+  doi             = {doi: 10.1016/j.bushor.2015.03.008},
+  year            = {Jul. 2015}
+}
+
+@article{lopezramos,
+  author          = {G. A. M. de la Fe y D. López-Ramos},
+  journal         = {Santiago},
+  number          = {149},
+  title           = {Realidad Aumentada, una herramienta para la gestión de los valores patrimoniales. Augmented Reality, a tool for the management of heritage values},
+  pages           = {213-222},
+  year            = {Jun. 2019}
+}
+
+@article{franco,
+  author          = {G. E. Franco},
+  journal         = {Ventana Informática},
+  number          = {23},
+  title           = {Sistema de gestión de alarmas para SCADA aplicado a la domótica de un hotel [Alarm management system for SCADA applied to domotic in a hotel]},
+  year            = {Dec. 2010}
+}
+
+@article{cordovacorso,
+  author          = {A. S. Córdova, A. V. A. Corzo y A. L. A. Noda},
+  journal         = {Revista Cubana de Ingeniería},
+  number          = {3},
+  title           = {Sistema de monitorización de consumo de energía eléctrica en el Hotel Nacional de Cuba},
+  volume          = {11},
+  pages           = {22-32},
+  year            = {Sep. 2020}
+}
+
+@article{morales,
+  author          = {D. V. Morales, N. P. Pérez y L. G. Marrero},
+  journal         = {Serie Científica de la Universidad de las Ciencias Informáticas},
+  number          = {5},
+  title           = {Bases para implementación de IoT en la UCI, orientada a la protección del medio ambiente},
+  volume          = {13},
+  pages           = {41-54},
+  year            = {Feb. 2020}
+}
+
+@article{cruzrojas,
+  author          = {I. P. D. Cruz, D. S. D. B. Rojas y I. G. G. Jiménez},
+  journal         = {Tono, Revista Técnica de la Empresa de Telecomunicaciones de Cuba S.A},
+  number          = {1},
+  title           = {Sistema IoT de control de acceso inteligente basado en Arduino y servicios web},
+  volume          = {14},
+  pages           = {49-60},
+  year            = {Jul. 2018}
+}
+
+@article{herrera2020,
+  title={Sistema IoT para el control del nivel de tanques en Aguas de La Habana},
+  author={Herrera, Randy Plasencia and Jones, Norma Elena Perryman and Santana, Mar{\'\i}a de los {\'A}ngeles Rabanillo},
+  journal={Revista Cubana de Transformaci{\'o}n Digital},
+  volume={1},
+  number={1},
+  pages={38--52},
+  year={2020}
+}
+
+@article{ochoa2018alternativa,
+  title={Alternativa Open Source en la implementaci{\'o}n de un sistema IoT para la medici{\'o}n de la calidad del aire.},
+  author={Ochoa Duarte, Alexei and Cangrejo Aljure, Libia Denisse and Delgado, Tatiana},
+  journal={Revista Cubana de Ciencias Inform{\'a}ticas},
+  volume={12},
+  number={1},
+  pages={189--204},
+  year={2018},
+  publisher={Universidad de las Ciencias Inform{\'a}ticas}
+}
